Fix info form alignment when asking as anon

--- a/client/styles/global.scss
+++ b/client/styles/global.scss
@@ -393,7 +393,6 @@ a {
 }
 
 #checkarea2 {
-  padding-top: 13px;
 	width: 180px;
 	float: left;
 }
